--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,10 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+                            Step by step
+https://gorails.com/setup/ubuntu/14.10
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Ruby -v     << ruby 2.2.3p173 (2015-08-18 revision 51636) [i686-linux]
+Rails -v    << Rails 4.2.4
 
 
 Please feel free to use a different markup language if you do not plan to run
