Avatars for users edit & show views

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,8 @@
                             Step by step
 https://gorails.com/setup/ubuntu/14.10
 
+	 sudo apt-get install imagemagick
+
   Ruby -v     << ruby 2.2.3p173 (2015-08-18 revision 51636) [i686-linux]
   Rails -v    << Rails 4.2.4
 
