--- a/README.rdoc
+++ b/README.rdoc
@@ -13,5 +13,12 @@ https://gorails.com/setup/ubuntu/14.10
   http://htmltohaml.com/
 
 
+                            Roles
+         superadmin  admin  moderator    users
+users       all      edit     read     read, edit self
+events      all      edit     edit     read, create, [edit, delete] if owner
+comments    all      edit     edit     read, create, [edit, delete] if owner
+
+
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
