--- a/README.rdoc
+++ b/README.rdoc
@@ -24,3 +24,5 @@ comments    all      edit     edit     read, create, [edit, delete] if owner
 	http://railscasts.com/episodes/370-ransack?autoplay=true
 - Carmen (Country/City) https://github.com/jim/carmen
 - select2 (Select-pipeline) https://github.com/argerim/select2-rails
+- gmaps4rails (google maps) https://github.com/apneadiving/Google-Maps-for-Rails
+	tutorial https://www.youtube.com/watch?v=R0l-7en3dUw&feature=youtu.be
